# kilograms

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  setup.py
__dev/: adding_weights_comparison_with_one_fixed_var_and_discrete_values.py  saving_plots.py  streams.py
kilograms/: __init__.py  array_ops.py  defaults.py  histogramming.py  io.py  plotting.py
kilograms/tools/: histogram2D.py  kilograms_duckdb_plot.py  kilograms_make_plot.py  kilograms_plot.py  kilograms_predefined_plots.py  kilograms_rawdata.py  kilograms_scatterplot_feather.py  table_dims_in_histograms.py
tools/: kilograms_duckdb_plot.py  kilograms_feather_head.py  kilograms_make_plot.py  kilograms_plot.py  kilograms_predefined_plots.py  kilograms_rawdata.py  kilograms_scatterplot_feather.py  table_dims_in_histograms.py
